--- a/compose.yaml
+++ b/compose.yaml
@@ -2,10 +2,29 @@ name: printerp
 services:
   db:
     container_name: db
-    image: bitnami/postgresql:latest
+    image: postgres:17.5-alpine3.21
     ports:
       - 5432:5432
     environment:
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=docker
       - POSTGRES_DB=printerp
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4:9.3.0
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com 
+      - PGADMIN_DEFAULT_PASSWORD=admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+  
+volumes:
+  postgres_data:
+  pgadmin_data:
