--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,6 +24,7 @@
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.23",
+    "uuid": "^11.0.5",
     "zod": "^3.24.3"
   },
   "devDependencies": {
