--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,8 +12,6 @@
     "env:load": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@printerp/auth": "workspace:*",
-    "@printerp/env": "workspace:*",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.10.0",
@@ -21,10 +19,13 @@
     "@mui/material": "^6.4.0",
     "@mui/x-data-grid": "^7.24.0",
     "@mui/x-date-pickers": "^7.26.0",
+    "@printerp/auth": "workspace:*",
+    "@printerp/env": "workspace:*",
     "@tabler/icons-react": "^3.28.1",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "fast-xml-parser": "^5.2.5",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
@@ -44,8 +45,8 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "~5.6.2",
     "dotenv-cli": "^8.0.0",
+    "typescript": "~5.6.2",
     "vite": "^6.0.5"
   },
   "prettier": "@printerp/prettier",
