--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,9 @@
     "db:migrate": "pnpm env:load tsx ./node_modules/typeorm/cli.js -d src/database/data-source.ts migration:run",
     "db:generate": "pnpm env:load tsx ./node_modules/typeorm/cli.js -d src/database/data-source.ts migration:generate",
     "env:load": "dotenv -e ../../.env --",
-    "typeorm": "tsx ./node_modules/typeorm/cli.js -d src/database/data-source.ts"
+    "typeorm": "tsx ./node_modules/typeorm/cli.js -d src/database/data-source.ts",
+    "build": "tsup",
+    "start": "node dist/http/server.js"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
@@ -35,6 +37,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^22.15.3",
     "dotenv-cli": "^8.0.0",
+    "tsup": "^8.5.0",
     "tsx": "^4.19.3"
   },
   "prettier": "@printerp/prettier",
