feat: adiciona pacote de env do servidor separado

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "pnpm env:load tsx watch src/http/server.ts",
-    "db:migrate": "pnpm env:load tsx ./node_modules/typeorm/cli.js -d src/database/data-source.ts migration:run",
-    "db:generate": "pnpm env:load tsx ./node_modules/typeorm/cli.js -d src/database/data-source.ts migration:generate",
+    "dev": "pnpm tsx watch src/http/server.ts",
+    "db:migrate": "pnpm tsx ./node_modules/typeorm/cli.js -d src/database/data-source.ts migration:run",
+    "db:generate": "pnpm tsx ./node_modules/typeorm/cli.js -d src/database/data-source.ts migration:generate",
     "env:load": "dotenv -e ../../.env --",
     "typeorm": "tsx ./node_modules/typeorm/cli.js -d src/database/data-source.ts",
     "build": "tsup",
@@ -18,7 +18,7 @@
     "@fastify/swagger": "^9.5.0",
     "@fastify/swagger-ui": "^5.2.2",
     "@printerp/auth": "workspace:*",
-    "@printerp/env": "workspace:*",
+    "@printerp/env-server": "workspace:*",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.3.2",
     "fastify-plugin": "^5.0.1",
