--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "pnpm env:load vite",
+    "dev": "pnpm vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -20,7 +20,7 @@
     "@mui/x-data-grid": "^7.24.0",
     "@mui/x-date-pickers": "^7.26.0",
     "@printerp/auth": "workspace:*",
-    "@printerp/env": "workspace:*",
+    "@printerp/env-client": "workspace:*",
     "@tabler/icons-react": "^3.28.1",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
