--- a/packages/env-server/tsconfig.json
+++ b/packages/env-server/tsconfig.json
@@ -1,6 +1,14 @@
 {
   "extends": "@printerp/tsconfig/node.json",
+  "compilerOptions": {
+    "rootDir": ".",
+    "outDir": "./dist"
+  },
   "include": [
     "index.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
