--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -1,6 +1,15 @@
 {
   "extends": "@printerp/tsconfig/library.json",
+  "compilerOptions": {
+    "rootDir": "./src",
+    "outDir": "./dist"
+  },
   "include": [
-    "src/**/*",
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.test.*"
   ]
 }
