--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -10,6 +10,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
+    "exactOptionalPropertyTypes": false,
     "outDir": "./dist",
     "rootDir": "./src"
   },
