--- a/config/prettier/package.json
+++ b/config/prettier/package.json
@@ -2,7 +2,7 @@
   "name": "@printerp/prettier",
   "version": "0.0.0",
   "private": true,
-  "main": "index.mjs",
+  "main": "index.js",
   "devDependencies": {
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11"
