--- a/config/eslint-config/package.json
+++ b/config/eslint-config/package.json
@@ -3,18 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "main": "index.js",
   "exports": {
     "./node": "./node.js",
-    "./library": "./library.js"
+    "./react": "./react.js"
   },
   "peerDependencies": {
     "eslint": ">=9.0.0"
   },
   "devDependencies": {
-    "@printerp/prettier": "workspace:*",
     "@eslint/js": "^9.31.0",
+    "@printerp/prettier": "workspace:*",
     "eslint": "^9.31.0",
     "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-simple-import-sort": "^12.1.1",
